17th October - Second Set Of Changes

--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -88,8 +88,8 @@
   
           <form id="reset-password-form" method="post" action="{% url 'reset_password' %}">
             {% csrf_token %}
-            <input type="hidden" name="uidb64" value="{{ uidb64 }}">
-            <input type="hidden" name="token" value="{{ token }}">
+            <input type="hidden" name="uidb64" value={{ uidb64 }}>
+            <input type="hidden" name="token" value={{ token }}>
             <div class="col-md-9 form-group mt-3 mt-md-0 login">
                 <input type="password" class="form-control" name="password" id="password" placeholder="New Password">
                 <br>
