Final Changes for 17th October

--- a/templates/home.html
+++ b/templates/home.html
@@ -647,8 +647,8 @@
               1000 Hilltop Circle <br>
               Baltimore, MD 21227<br>
               United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              <strong>Phone:</strong> +1 667 464 5415<br>
+              <strong>Email:</strong> teamosteoarthoscan@gmail.com <br>
             </p>
           </div>
         </div>
