--- a/templates/reset_password.html
+++ b/templates/reset_password.html
@@ -88,8 +88,6 @@
   
           <form id="reset-password-form" method="post" action="{% url 'reset_password' %}">
             {% csrf_token %}
-            <input type="hidden" name="uidb64" value={{ uidb64 }}>
-            <input type="hidden" name="token" value={{ token }}>
             <div class="col-md-9 form-group mt-3 mt-md-0 login">
                 <input type="password" class="form-control" name="password" id="password" placeholder="New Password">
                 <br>
@@ -114,47 +112,33 @@
 <!-- JavaScript for the Reset Password Form -->
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
 <script>
-    document.addEventListener("DOMContentLoaded", function () {
-        const resetPasswordForm = document.querySelector("#reset-password-form");
-        const passwordInput = resetPasswordForm.querySelector('input[name="password"]');
-        const confirmPasswordInput = resetPasswordForm.querySelector('input[name="confirm_password"]');
-        const uidb64Input = resetPasswordForm.querySelector('input[name="uidb64"]');
-        const tokenInput = resetPasswordForm.querySelector('input[name="token"]');
+  document.addEventListener("DOMContentLoaded", function () {
+      const resetPasswordForm = document.querySelector("#reset-password-form");
 
-        // Retrieve uidb64 and token from the form's hidden fields
-        const uidb64 = uidb64Input.value;
-        const token = tokenInput.value;
+      resetPasswordForm.addEventListener("submit", function (e) {
+          const passwordInput = resetPasswordForm.querySelector('input[name="password"]');
+          const confirmPasswordInput = resetPasswordForm.querySelector('input[name="confirm_password"]');
 
-        resetPasswordForm.addEventListener("submit", function (e) {
-            e.preventDefault(); // Prevent the default form submission
-
-            // Check if the password fields are blank
-            if (!passwordInput.value.trim() || !confirmPasswordInput.value.trim()) {
-                Swal.fire("Error", "Please enter both password fields", "error");
-            } else if (passwordInput.value !== confirmPasswordInput.value) {
-                Swal.fire("Error", "Passwords do not match", "error");
-            } else {
-                // Passwords match, show a success message with a spinner
-                Swal.fire({
-                    title: "Please wait...",
-                    allowOutsideClick: false,
-                    onBeforeOpen: () => {
-                        Swal.showLoading();
-                    },
-                });
-
-                // Simulate an asynchronous process, replace with your server request
-                setTimeout(() => {
-                    // Simulated success, replace with your logic
-                    Swal.fire("Success", "Password changed successfully", "success").then(() => {
-                        resetPasswordForm.submit();
-                        window.location.href = '/';
-                    });
-                }, 2000); // Replace this with the actual server request
-            }
-        });
-    });
+          if (!passwordInput.value.trim() || !confirmPasswordInput.value.trim()) {
+              e.preventDefault(); // Prevent form submission
+              Swal.fire("Error", "Please enter both password fields", "error");
+          } else if (passwordInput.value !== confirmPasswordInput.value) {
+              e.preventDefault(); // Prevent form submission
+              Swal.fire("Error", "Passwords do not match", "error");
+          } else {
+              // Passwords match, show a success message with a spinner
+              Swal.fire({
+                  title: "Please wait...",
+                  allowOutsideClick: false,
+                  onBeforeOpen: () => {
+                      Swal.showLoading();
+                  },
+              });
+          }
+      });
+  });
 </script>
+
 
   
     
